# Raytracer

./: CMakeLists.txt  README.md  main.cpp  main.sh
shaders/: quad.frag  raytrace.comp
src/: main.cpp  vec3.h
